--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="header__wrapper">
         <img src="images/logo.svg" alt="" class="header__logo">
         <h2 class="header__title">
-          <a href="/" class="header__link">Курсы макияжа для себя 
+          <a href="index.html" class="header__link">Курсы макияжа для себя 
             от Natali Krasavina</a>
         </h2>
       </div>
