--- a/index.html
+++ b/index.html
@@ -285,7 +285,9 @@
   <footer class="footer">
     <div class="container">
       <h2 class="footer__contact-title title">Я В INSTAGRAM</h2>
-      <p class="footer__contact">@natalikrasavina_</p>
+      <p class="footer__contact">
+        <a href="https://www.instagram.com/natalikrasavina_?igsh=aDRseXp2aWJtdm55" class="footer__contact-link">@natalikrasavina_</a>
+      </p>
       <h2 class="footer__contact-title title">whats app</h2>
       <p class="footer__contact">8 985 624 72 70</p>
       
