--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
       <div class="header__wrapper">
         <img src="images/logo.svg" alt="" class="header__logo">
         <h2 class="header__title">
-          <a href="index.html" class="header__link">Курсы макияжа для себя 
-            от Natali Krasavina</a>
+          <a href="index.html" class="header__link">Курсы макияжа <br>
+            для себя 
+            от <br> 
+          </a>
+          <a href="" class="header__link header__owner">Natali Krasavina</a>
         </h2>
       </div>
     </div>
@@ -77,10 +80,11 @@
       <div class="container">
         <h2 class="makeups__title title">Макияжи, которые мы делаем на курсе</h2>
         <div class="makeups__wrapper">
-          <img src="images/mps1.png" alt="" class="makeups__img">
-          <img src="images/mps2.png" alt="" class="makeups__img">
-          <img src="images/mps3.png" alt="" class="makeups__img">
-          <img src="images/mps4.png" alt="" class="makeups__img">
+          <img src="images/modnyj-novogodnij-makiyazh-79.jpg" alt="">
+          <img src="images/gJ8cXq.jpg" alt="">
+          <img src="images/893cb6a125efcc6e4ca4d08d85e747a2.jpg" alt="">
+          <img src="images/d12524f29fa1da4f0eeef9b41509f2c8.jpg" alt="">
+          <img src="images/36c4190b1da8ac0352c07d0a5a350e8e.jpg" alt="">
         </div>
       </div>
     </section>
@@ -92,10 +96,13 @@
           <img src="images/makeups-frame.svg" alt="" class="results__frame">
         </div>
         <div class="results__img-wrapper">
-          <img src="images/results1.png" alt="" class="results__img">
-          <img src="images/results2.png" alt="" class="results__img">
-          <img src="images/results3.png" alt="" class="results__img">
-          <img src="images/results4.png" alt="" class="results__img">
+          <!-- <img src="images/IMG_20230909_094129_458.JPG" alt=""> -->
+          <img src="images/IMG_20240607_173251_102.jpg" alt="">
+          <img src="images/AirBrush_20240621113239.jpg" alt="">
+          <img src="images/20240607200338.jpg" alt="">
+          <img src="images/AirBrush_20240615143507.jpg" alt="">
+          <img src="images/IMG_7492 (1)3.jpg" alt="">
+          <img src="images/IMG_20230909_094129_458.JPG" alt="">
         </div>
       </div>
     </section>
@@ -123,7 +130,7 @@
             <img src="images/makeups-frame.svg" alt="">
           </div>
           <div class="ways__info">
-            <p class="ways__info-text">Урок длится 3-3,5 часа</p>
+            <p class="ways__info-text">Урок длится 2,5-3 часа</p>
             <p class="ways__info-text">Состоит из 3-х блоков:</p>
           </div>
           <div class="ways__point">
@@ -158,8 +165,8 @@
           </div>
           <div class="ways__info">
             <ul class="ways__info-text ways__info-list"> Урок длится на выбор:
-              <li>1 День (6-7 часов с перерывом)</li>
-              <li>2 Дня по 3,5 часа</li>
+              <li>1 День (5,5-6 часов с перерывом)</li>
+              <li>2 Дня по 2,5 часа</li>
             </ul>
             <p class="ways__info-text">Состоит из 6-ти блоков:</p>
           </div>
@@ -192,28 +199,24 @@
       </div>
     </section>
   
-    <div class="for__title-wrapper">
-      <h2 class="for__block-title">Индивидуально для вас</h2>
-      <img src="images/for-frame.svg" alt="">
-    </div>
     <section class="for-start">
       <div class="container">
-        <div class="for__fig-wrapper">
-          <img src="images/for-fig1.svg" alt="" class="for__img-1">
+        <div class="for__title-wrapper title">
+          <h2 class="for__block-title">Индивидуально для вас</h2>
         </div>
-        <div class="for__fig-wrapper second-fig">
-          <img src="images/for-fig2.svg" alt="" class="for__img-2">
+        <div class="for__text-block">
+          <p class="">Мы подберём средства для макияжа и подготовки кожи, максимально подходящие именно вам</p>
         </div>
-      </div>
-    </section>
-  
-    <section class="for-finish">
-      <div class="container">
-        <div class="for__fig-wrapper">
-          <img src="images/for-fig3.svg" alt="" class="for__img-1">
+        <div class="for__img-wrapper">
+          <img src="/makeup/images/for_2.jpg" alt="" class="for__img">
+          <img src="/makeup/images/for_1.jpg" alt="" class="for__img">
+          <img src="/makeup/images/for_3.jpg" alt="" class="for__img">
         </div>
-        <div class="for__fig-wrapper second-fig">
-          <img src="images/for-fig4.svg" alt="" class="for__img-2">
+        <div class="for__text-block">
+          <p class="">С вами останутся учебные материалы и схемы, чтобы вы смогли пользоваться ими после обучения</p>
+        </div>
+        <div class="for__text-block">
+          <p>Определим базовый набор кистей</p>
         </div>
       </div>
     </section>
@@ -239,7 +242,7 @@
       <div class="container">
   
         <div class="about__wrapper">
-          <img src="images/about-img.svg" alt="">
+          <img src="images/about-logo.svg" alt="">
           <div class="about__info-wrapper">
             <h2 class="about__title">О себе</h2>
             <p class="about__info">“Макияж - это про удовольствие, любовь 
@@ -271,8 +274,7 @@
         <p class="price__prog-price price__text">11 900 РУБ</p>
 
         <div class="price__text-wrapper">
-          <p class="price__bonus">ПРИОБРЕТИТЕ СЕРТИФИКАТ ДЛЯ БЛИЗКОГО ЧЕЛОВЕКА В ПОДАРОК </p>
-          <img src="images/price-frame.svg" alt="">
+          <p class="price__bonus title">ПРИОБРЕТИТЕ СЕРТИФИКАТ ДЛЯ БЛИЗКОГО ЧЕЛОВЕКА В ПОДАРОК </p>
         </div>
         
       </div>
@@ -289,7 +291,7 @@
       <p class="footer__contact">
         <a href="https://www.instagram.com/natalikrasavina_?igsh=aDRseXp2aWJtdm55" class="footer__contact-link">@natalikrasavina_</a>
       </p>
-      <h2 class="footer__contact-title title">whats app</h2>
+      <h2 class="footer__contact-title title">whats app <br> telegram</h2>
       <p class="footer__contact">8 985 624 72 70</p>
       
       <div class="footer__img-wrapper">
