rename some assets

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
       <div class="container">
         <h2 class="makeups__title title">Макияжи, которые мы делаем на курсе</h2>
         <div class="makeups__wrapper">
-          <img src="images/modnyj-novogodnij-makiyazh-79.jpg" alt="">
-          <img src="images/gJ8cXq.jpg" alt="">
-          <img src="images/893cb6a125efcc6e4ca4d08d85e747a2.jpg" alt="">
-          <img src="images/d12524f29fa1da4f0eeef9b41509f2c8.jpg" alt="">
-          <img src="images/36c4190b1da8ac0352c07d0a5a350e8e.jpg" alt="">
+          <img src="images/makeup-1.jpg" alt="">
+          <img src="images/makeup-2.jpg" alt="">
+          <img src="images/makeup-3.jpg" alt="">
+          <img src="images/makeup-4.jpg" alt="">
+          <img src="images/makeup-5.jpg" alt="">
         </div>
       </div>
     </section>
@@ -97,12 +97,12 @@
         </div>
         <div class="results__img-wrapper">
           <!-- <img src="images/IMG_20230909_094129_458.JPG" alt=""> -->
-          <img src="images/IMG_20240607_173251_102.jpg" alt="">
-          <img src="images/AirBrush_20240621113239.jpg" alt="">
-          <img src="images/20240607200338.jpg" alt="">
-          <img src="images/AirBrush_20240615143507.jpg" alt="">
-          <img src="images/IMG_7492 (1)3.jpg" alt="">
-          <img src="images/IMG_20230909_094129_458.JPG" alt="">
+          <img src="images/res-1.jpg" alt="">
+          <img src="images/res-2.jpg" alt="">
+          <img src="images/res-3.jpg" alt="">
+          <img src="images/res-4.jpg" alt="">
+          <img src="images/res-5.jpg" alt="">
+          <img src="images/res-6.jpg" alt="">
         </div>
       </div>
     </section>
