--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,42 +15,51 @@
         <h2 class="header__title">
           <a href="index.html" class="header__link">Курсы макияжа <br>
             для себя 
-            от <br> 
+            от <br>
           </a>
-          <a href="" class="header__link header__owner">Natali Krasavina</a>
+          <span class="header__link header__owner">Natali Krasavina</span>
         </h2>
       </div>
     </div>
   </header>
-  <hr class="header__down">
 
   <main>
-    <section class="main">
-      <div class="container">
-        <div class="main__subtitles">
-          <p class="main__subtitle">Подчеркните свою красоту!</p>
-          <p class="main__subtitle">Прояви индивидуальность!</p>
-          <p class="main__subtitle">Вдохновляй всех вокруг!</p>
-          <p class="main__subtitle">Стань с косметикой на "ты"!</p>
-          <p class="main__subtitle">Лёгкое и понятное обучение самым женственным макияжам!</p>
+    <div class="container">
+      <section class="main">
+        <h3 class="header__down">Научу вас делать до 5ти макияжей</h3>
+        <div class="main__image-wrapper">
+          <img src="images/main-img1.svg" alt="">
+          <img src="images/main-img2.svg" alt="">
         </div>
-      </div>
-    </section>
+        <p class="main__getstudy">Запишись через WhatsApp <a href="tel:+79856247270" class="main__getstudy-tel">8 985 624 72 70</a> и получи обучение со скидкой
+        </p>
+      </section>
+    </div>
+
+    <div class="container">
+      <section class="services">
+        <h2 class="services__title title">услуги</h2>
+        <ul class="services__list">
+          <li class="services__list-item">Обучающий курс "Макияж для себя"</li>
+          <li class="services__list-item">Обучающий курс "Локоны, причёски, объём"</li>
+          <li class="services__list-item">Макияж</li>
+          <li class="services__list-item">Причёски</li>
+        </ul>
+      </section>
+    </div>
   
-    <section class="place">
+    <!-- <section class="place">
       <div class="container">
-        <h2 class="place__title">Макияж | Причёски | Обучение макияжу</h2>
         <p class="place__info">г. Москва. Студия в центре, рядом с метро</p>
       </div>
-    </section>
+    </section> -->
   
     <section class="why">
       <div class="container">
   
         <div class="why__wrapper">
           <div class="why__text">
-            <h2 class="why__title title">Этот курс
-              подойдёт Вам:</h2>
+            <h2 class="why__title">Обучение подойдёт Вам:</h2>
             <p class="why__info">Если Вы хотите разбираться в косметике</p>
           </div>
           <div class="why__img">
@@ -60,15 +69,14 @@
   
         <p class="why__block">А не копить покупки, которые Вам не подходят и стоят на полке</p>
   
-        <p class="why__cond">Если не получается подобрать тональную основу
-          Или она плохо наносится, не держится</p>
-        <p class="why__block">А хочется тратить на макияж менее 30ти минут в день и делать его легко и в радость</p>
+        <p class="why__cond">Мы подберём необходимые средства, и поход в магазин перестанет быть мучением</p>
+        <p class="why__block">Если не хочется тратить на макияж по 2 часа и постоянно смывать стрелки</p>
         
-        <p class="why__cond">Больше не будет проблемы, что макияж старит лицо, плохо наносится</p>
-        <p class="why__block">Вы научитесь наносить средства так, чтобы лицо выглядело свежим, отдохнувшим и подтянутым</p>
+        <p class="why__cond">Вы будете знать, какой макияж Вам подходит и делать его легко</p>
+        <p class="why__block">Больше не будет проблемы, что макияж прибавляет возраст или не держится</p>
   
-        <p class="why__cond">Сможете тратить на макияж минимум времени</p>
-  
+        <p class="why__cond">Вы научитесь наносить средства так, чтобы лицо выглядело свежим, отдохнувшим и подтянутым</p>
+        <h4 class="why__wouldyou">Вы давно хотели новый образ?</h4>
         <div class="why__frame">
           <p class="why__frame-text">На свидание, поход в кино, предложение руки и сердца? Теперь вы сможете сделать его сами</p>
           <img src="images/why-frame.svg" alt="" class="why__framge-img">
@@ -92,7 +100,7 @@
     <section class="results">
       <div class="container">
         <div class="results__wrapper">
-          <h2 class="results__title title">Результаты учениц</h2>
+          <h2 class="results__title">Результаты учениц</h2>
           <img src="images/makeups-frame.svg" alt="" class="results__frame">
         </div>
         <div class="results__img-wrapper">
@@ -201,9 +209,9 @@
   
     <section class="for-start">
       <div class="container">
-        <div class="for__title-wrapper title">
+        <!-- <div class="for__title-wrapper title"> -->
           <h2 class="for__block-title">Индивидуально для вас</h2>
-        </div>
+        <!-- </div> -->
         <div class="for__text-block">
           <p class="">Мы подберём средства для макияжа и подготовки кожи, максимально подходящие именно вам</p>
         </div>
