add new contact link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
           <img src="images/main-img1.svg" alt="">
           <img src="images/main-img2.svg" alt="">
         </div>
-        <p class="main__getstudy">Запишись через WhatsApp <a href="tel:+79856247270" class="main__getstudy-tel">8 985 624 72 70</a> и получи обучение со скидкой
+        <p class="main__getstudy">Запишись через WhatsApp
+          <span class="main__links-wrapper">
+            <a target="_blank" href="https://wa.me/message/AWCTY6CNMLPIG1" class="main__getstudy-tel">8 985 624 72 70</a>
+          </span>
+          и получи обучение со скидкой
         </p>
       </section>
     </div>
@@ -307,5 +311,6 @@
       </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
