change some pictures

--- a/index.html
+++ b/index.html
@@ -92,11 +92,10 @@
       <div class="container">
         <h2 class="makeups__title title">Макияжи, которые мы делаем на курсе</h2>
         <div class="makeups__wrapper">
-          <img src="images/makeup-1.jpg" alt="">
-          <img src="images/makeup-2.jpg" alt="">
-          <img src="images/makeup-3.jpg" alt="">
-          <img src="images/makeup-4.jpg" alt="">
-          <img src="images/makeup-5.jpg" alt="">
+          <img src="images/makeup-3.jpg" alt="" class="makeups-wrapper__img" style="transform: rotate(-10deg);">
+          <img src="images/makeup-1.jpg" alt="" class="makeups-wrapper__img" style="transform: rotate(10deg) translate(0, 40px);">
+          <img src="images/makeup-4.svg" alt="" class="makeups-wrapper__img" style="transform: rotate(10deg);">
+          <img src="images/makeup-5.jpg" alt="" class="makeups-wrapper__img" style="transform: rotate(-10deg) translate(0, 30px);">
         </div>
       </div>
     </section>
@@ -108,13 +107,10 @@
           <img src="images/makeups-frame.svg" alt="" class="results__frame">
         </div>
         <div class="results__img-wrapper">
-          <!-- <img src="images/IMG_20230909_094129_458.JPG" alt=""> -->
-          <img src="images/res-1.jpg" alt="">
-          <img src="images/res-2.jpg" alt="">
-          <img src="images/res-3.jpg" alt="">
-          <img src="images/res-4.jpg" alt="">
-          <img src="images/res-5.jpg" alt="">
-          <img src="images/res-6.jpg" alt="">
+          <img src="images/res-1.jpg" alt="" class="results__img" style="transform: rotate(-10deg);">
+          <img src="images/res-2.svg" alt="" class="results__img" style="transform: rotate(10deg) translate(0, 15px);">
+          <img src="images/res-3.svg" alt="" class="results__img" style="transform: rotate(10deg) translate(0, 20px);">
+          <img src="images/res-4.jpg" alt="" class="results__img" style="transform: rotate(-10deg) translate(0, 30px);">
         </div>
       </div>
     </section>
@@ -217,7 +213,7 @@
           <h2 class="for__block-title">Индивидуально для вас</h2>
         <!-- </div> -->
         <div class="for__text-block">
-          <p class="">Мы подберём средства для макияжа и подготовки кожи, максимально подходящие именно вам</p>
+          <p>Мы подберём средства для макияжа и подготовки кожи, максимально подходящие именно вам</p>
         </div>
         <div class="for__img-wrapper">
           <img src="/makeup/images/for_2.jpg" alt="" class="for__img">
@@ -225,7 +221,7 @@
           <img src="/makeup/images/for_3.jpg" alt="" class="for__img">
         </div>
         <div class="for__text-block">
-          <p class="">С вами останутся учебные материалы и схемы, чтобы вы смогли пользоваться ими после обучения</p>
+          <p>С вами останутся учебные материалы и схемы, чтобы вы смогли пользоваться ими после обучения</p>
         </div>
         <div class="for__text-block">
           <p>Определим базовый набор кистей</p>
