--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       </section>
     </div>
   
-    <!-- <section class="place">
+    <section class="place">
       <div class="container">
-        <p class="place__info">г. Москва. Студия в центре, рядом с метро</p>
+        <p class="place__info">студия в г. москва, рядом с метро</p>
       </div>
-    </section> -->
+    </section>
   
     <section class="why">
       <div class="container">
