add new pictures and some changes

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           <img src="images/main-img1.svg" alt="">
           <img src="images/main-img2.svg" alt="">
         </div>
-        <p class="main__getstudy">Запишись через WhatsApp
+        <p class="main__getstudy">Запишись через WhatsApp <br>
           <span class="main__links-wrapper">
             <a target="_blank" href="https://wa.me/message/AWCTY6CNMLPIG1" class="main__getstudy-tel">8 985 624 72 70</a>
-          </span>
+          </span><br>
           и получи обучение со скидкой
         </p>
       </section>
@@ -209,11 +209,12 @@
   
     <section class="for-start">
       <div class="container">
-        <!-- <div class="for__title-wrapper title"> -->
-          <h2 class="for__block-title">Индивидуально для вас</h2>
-        <!-- </div> -->
+        <h2 class="for__block-title">Индивидуально для вас</h2>
         <div class="for__text-block">
-          <p>Мы подберём средства для макияжа и подготовки кожи, максимально подходящие именно вам</p>
+          <p>Подберём косметику и уход для вашей косметички</p>
+        </div>
+        <div class="for__text-block">
+          <p>определим базовый набор кистей</p>
         </div>
         <div class="for__img-wrapper">
           <img src="/makeup/images/for_2.jpg" alt="" class="for__img">
@@ -221,10 +222,10 @@
           <img src="/makeup/images/for_3.jpg" alt="" class="for__img">
         </div>
         <div class="for__text-block">
-          <p>С вами останутся учебные материалы и схемы, чтобы вы смогли пользоваться ими после обучения</p>
+          <p>подготовим Учебные материалы и схемы, чтобы вы смогли пользоваться ими после обучения</p>
         </div>
-        <div class="for__text-block">
-          <p>Определим базовый набор кистей</p>
+        <div class="for__text-note">
+          <p>Всё необходимое мы предоставляем : Косметику, кисти, расходники</p>
         </div>
       </div>
     </section>
