--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <a href="index.html" class="header__link">Курсы макияжа <br>
             для себя 
             от <br>
+            <span class="header__link header__owner">Natali Krasavina</span>
           </a>
-          <span class="header__link header__owner">Natali Krasavina</span>
         </h2>
       </div>
     </div>
@@ -33,7 +33,7 @@
         </div>
         <p class="main__getstudy">Запишись через WhatsApp <br>
           <span class="main__links-wrapper">
-            <a target="_blank" href="https://wa.me/message/AWCTY6CNMLPIG1" class="main__getstudy-tel">8 985 624 72 70</a>
+            <a target="_blank" href="https://wa.me/79856247270?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5.%20%D0%A5%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F%20%D0%BD%D0%B0%C2%A0%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5" class="main__getstudy-tel">8 985 624 72 70</a>
           </span><br>
           и получи обучение со скидкой
         </p>
@@ -54,7 +54,7 @@
   
     <section class="place">
       <div class="container">
-        <p class="place__info">студия в г. москва, рядом с метро</p>
+        <p class="place__info">Студия в г. Москва, рядом с метро</p>
       </div>
     </section>
   
@@ -300,8 +300,14 @@
       <p class="footer__contact">
         <a href="https://www.instagram.com/natalikrasavina_?igsh=aDRseXp2aWJtdm55" class="footer__contact-link">@natalikrasavina_</a>
       </p>
-      <h2 class="footer__contact-title title">whats app <br> telegram</h2>
-      <p class="footer__contact">8 985 624 72 70</p>
+      <h2 class="footer__contact-title title">WhatsApp</h2>
+      <p class="footer__contact">
+        <a target="_blank" href="https://wa.me/79856247270?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5.%20%D0%A5%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F%20%D0%BD%D0%B0%C2%A0%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5" class="footer__contact-link">8 985 624 72 70</a>
+      </p>
+      <h2 class="footer__contact-title title">telegram</h2>
+      <p class="footer__contact">
+        <a target="_blank" href="https://t.me/natalikrasavina_makeup" class="footer__contact-link">8 985 624 72 70</a>
+      </p>
       
       <div class="footer__img-wrapper">
         <a href="#header" class="footer__main-link"><img src="images/footer-logo.svg" alt=""></a>
