change the address info

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   
     <section class="place">
       <div class="container">
-        <p class="place__info">Студия в г. Москва, рядом с метро</p>
+        <p class="place__info">Студия: г. Москва, рядом с метро</p>
       </div>
     </section>
   
