--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <div class="container">
   
         <div class="about__wrapper">
-          <img src="images/about-logo.svg" alt="">
+          <img src="images/about-logo-new.svg" alt="">
           <div class="about__info-wrapper">
             <h2 class="about__title">О себе</h2>
             <p class="about__info">“Макияж - это про удовольствие, любовь 
