some style changes

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="ways__block">
   
           <div class="ways__title-wrapper">
-            <h2 class="ways__block-title">курс “макияж на каждый день”</h2>
+            <h2 class="ways__block-title">курс <br>“макияж на каждый день”</h2>
             <img src="images/makeups-frame.svg" alt="">
           </div>
           <div class="ways__info">
@@ -168,7 +168,7 @@
           </div>
   
           <div class="ways__title-wrapper">
-            <h2 class="ways__block-title">курс “макияж на любой случай”</h2>
+            <h2 class="ways__block-title">курс <br>“макияж на любой случай”</h2>
             <img src="images/makeups-frame.svg" alt="">
           </div>
           <div class="ways__info">
