--- a/index.html
+++ b/index.html
@@ -295,21 +295,21 @@
   </main>
 
   <footer class="footer">
-    <div class="container">
-      <h2 class="footer__contact-title title">Я В INSTAGRAM</h2>
-      <p class="footer__contact">
-        <a href="https://www.instagram.com/natalikrasavina_?igsh=aDRseXp2aWJtdm55" class="footer__contact-link">@natalikrasavina_</a>
-      </p>
-      <h2 class="footer__contact-title title">WhatsApp</h2>
-      <p class="footer__contact">
-        <a target="_blank" href="https://wa.me/79856247270?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5.%20%D0%A5%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F%20%D0%BD%D0%B0%C2%A0%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5" class="footer__contact-link">8 985 624 72 70</a>
-      </p>
-      <h2 class="footer__contact-title title">telegram</h2>
-      <p class="footer__contact">
-        <a target="_blank" href="https://t.me/natalikrasavina_makeup" class="footer__contact-link">8 985 624 72 70</a>
-      </p>
-      
+    <div class="container">      
       <div class="footer__img-wrapper">
+        <div class="footer__contact-wrapper">
+          <h2 class="footer__contact-title">Связь со мной</h2>
+          <div class="footer__icon-wrapper">
+            <a target="_blank" href="https://wa.me/79856247270?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5.%20%D0%A5%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F%20%D0%BD%D0%B0%C2%A0%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5">
+              <img src="images/whatsapp_black_logo_icon_147050.svg" alt="" class="footer__contact-icon">
+            </a>
+            <a target="_blank" href="https://t.me/natalikrasavina_makeup">
+              <img src="images/telegram_black_logo_icon_147073.svg" alt="" class="footer__contact-icon">
+            <a target="_blank" href="https://www.instagram.com/natalikrasavina_?igsh=aDRseXp2aWJtdm55">
+              <img src="images/instagram_black_logo_icon_147122.svg" alt="" class="footer__contact-icon">
+            </a>
+          </div>
+        </div>
         <a href="#header" class="footer__main-link"><img src="images/footer-logo.svg" alt=""></a>
       </div>
     </div>
