--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Makeup for ourselves</title>
-  <link rel="icon" href="images/icons8-макияж-96.png">
+  <link rel="icon" href="images/lipstick_makeup_icon_179287.svg">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
