--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <a target="_blank" href="https://wa.me/79856247270?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5.%20%D0%A5%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F%20%D0%BD%D0%B0%C2%A0%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5">
               <img src="images/whatsapp_black_logo_icon_147050.svg" alt="" class="footer__contact-icon">
             </a>
-            <a target="_blank" href="https://t.me/natalikrasavina_makeup">
+            <a target="_blank" href="https://t.me/natali_a_krasavina">
               <img src="images/telegram_black_logo_icon_147073.svg" alt="" class="footer__contact-icon">
             <a target="_blank" href="https://www.instagram.com/natalikrasavina_?igsh=aDRseXp2aWJtdm55">
               <img src="images/instagram_black_logo_icon_147122.svg" alt="" class="footer__contact-icon">
