--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section class="main">
         <h3 class="header__down">Научу вас делать до 5ти макияжей</h3>
         <div class="main__image-wrapper">
-          <!-- <img src="images/main-img1.svg" alt=""> -->
+          <img src="images/main-img1.svg" alt="">
           <img src="images/main-img2.svg" alt="">
         </div>
         <p class="main__getstudy">Запишись через WhatsApp <br>
